--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@iconscout/react-unicons": "^2.0.2",
     "@supabase/auth-ui-react": "^0.4.4",
     "@supabase/supabase-js": "^2.33.1",
     "@testing-library/jest-dom": "^5.17.0",
