Fix path browserify

--- a/package.json
+++ b/package.json
@@ -55,5 +55,16 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "dotenv": "^16.3.1"
-  }
+  },
+  "resolutions": {
+    "path": "path-browserify"
+  },
+  "webpack": {
+    "resolve": {
+      "fallback": {
+        "path": "path-browserify"
+      }
+    }
+  } 
 }
+
