--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "crypto-browserify": "^3.12.0",
     "js-cookie": "^3.0.5",
     "os-browserify": "^0.3.0",
+    "path": "^0.12.7",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -67,6 +68,9 @@
         "os": "os-browserify/browser"
       }
     }
-  } 
+  },
+  "browser": {
+    "path": false,
+    "stream": false
+  }
 }
-
