--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
+    "express": "^4.18.2",
     "js-cookie": "^3.0.5",
+    "nodemailer": "^6.9.7",
     "os-browserify": "^0.3.0",
     "path": "^0.12.7",
     "path-browserify": "^1.0.1",
