--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
         "use": "@vercel/node"
       },
       {
-        "src": "build/**/*.js",
+        "src": "build/**",
         "use": "@vercel/static-build"
       }
     ]
