--- a/vercel.json
+++ b/vercel.json
@@ -15,5 +15,11 @@
         }
       ]
     }
-  ]
+  ],
+  "functions": {
+    "api/server.js": {
+      "runtime": "nodejs14.x",
+      "methods": ["POST"]
+    }
+  }
 }
