--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap-icons": "^1.11.1",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
+    "emailjs-com": "^3.2.0",
     "express": "^4.18.2",
     "js-cookie": "^3.0.5",
     "nodemailer": "^6.9.7",
