--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@iconscout/react-unicons": "^2.0.2",
+    "@react-pdf/renderer": "^3.1.14",
     "@supabase/auth-ui-react": "^0.4.4",
     "@supabase/supabase-js": "^2.33.1",
     "@testing-library/jest-dom": "^5.17.0",
@@ -19,6 +20,7 @@
     "crypto-browserify": "^3.12.0",
     "emailjs-com": "^3.2.0",
     "express": "^4.18.2",
+    "file-saver": "^2.0.5",
     "js-cookie": "^3.0.5",
     "nodemailer": "^6.9.7",
     "os-browserify": "^0.3.0",
@@ -26,12 +28,15 @@
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-export-excel": "^0.5.3",
     "react-hook-form": "^7.48.2",
+    "react-pdf": "^7.5.1",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "stream-browserify": "^3.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
