--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@iconscout/react-unicons": "^2.0.2",
-    "@react-pdf/renderer": "^3.1.14",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf/renderer": "^3.3.4",
     "@supabase/auth-ui-react": "^0.4.4",
     "@supabase/supabase-js": "^2.33.1",
     "@testing-library/jest-dom": "^5.17.0",
@@ -22,6 +23,9 @@
     "express": "^4.18.2",
     "file-saver": "^2.0.5",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.1",
+    "jspdf-invoice-template": "^1.4.3",
     "nodemailer": "^6.9.7",
     "os-browserify": "^0.3.0",
     "path": "^0.12.7",
