--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "path": "^0.12.7",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
+    "react-datepicker": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-export-excel": "^0.5.3",
     "react-hook-form": "^7.48.2",
