--- a/package.json
+++ b/package.json
@@ -18,22 +18,27 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
     "buffer": "^6.0.3",
+    "chart.js": "^4.4.1",
     "crypto-browserify": "^3.12.0",
     "emailjs-com": "^3.2.0",
     "express": "^4.18.2",
     "file-saver": "^2.0.5",
+    "flatpickr": "^4.6.13",
     "js-cookie": "^3.0.5",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.1",
     "jspdf-invoice-template": "^1.4.3",
+    "moment": "^2.30.1",
     "nodemailer": "^6.9.7",
     "os-browserify": "^0.3.0",
     "path": "^0.12.7",
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-export-excel": "^0.5.3",
+    "react-flatpickr": "^3.10.13",
     "react-hook-form": "^7.48.2",
     "react-pdf": "^7.5.1",
     "react-router-dom": "^6.15.0",
