--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "bootstrap-icons": "^1.11.1",
     "buffer": "^6.0.3",
     "chart.js": "^4.4.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
+    "chartjs-to-image": "^1.2.2",
     "crypto-browserify": "^3.12.0",
     "emailjs-com": "^3.2.0",
     "express": "^4.18.2",
